# esp32-epson-control

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  epson_protocol.c  epson_protocol.h  main.c  nvs_storage.c  nvs_storage.h  uart_rs232.c  uart_rs232.h  udp_server.c  udp_server.h  web_pages.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
